Lançamento das aulas de propriedades

--- a/lesson-07/index.html
+++ b/lesson-07/index.html
@@ -9,7 +9,7 @@
     :root {
       /* cores */
       --cor-de-fundo: gray;
-      --cor-do-texto: yellow;
+      --cor-do-texto: cyan;
       --destacar-cor: white;
       /* bordas */
       --borda-padrao: 8px solid blue;
