Lançamento das atualização da aula

--- a/lesson-02/index.html
+++ b/lesson-02/index.html
@@ -11,7 +11,7 @@
 <body>
   <button>Clique aqui</button>
   <a href="../lesson-01/index.html">Aula 01</a>
-  <input type="text" />
+  <input type="text" placeholder="digite aqui" />
 
   <ul>
     <li>Item 01</li>
