--- a/lesson-06/index.html
+++ b/lesson-06/index.html
@@ -6,27 +6,20 @@
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
   <title>Reset CSS</title>
   <style>
-    /* 
-    Configuração padrão para iniciar a elaboraçao de uma página
+    /*  Configuração padrão -> */
     * {
       margin: 0;
       padding: 0px;
       box-sizing: border-box;
       outline: none;
-      }
-
-      a {
-        color: inherit;
-        text-decoration: none;
-      }
-        */
-
-    * {
-      margin: 0;
-      padding: 3px;
-      box-sizing: border-box;
-      outline: none;
     }
+
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
+
+    /* Configuração padrão <-  */
 
     html {
       font-size: 62.5;
@@ -53,11 +46,6 @@
     a,
     input {
       display: block;
-    }
-
-    a {
-      color: inherit;
-      text-decoration: none;
     }
 
     button {
